# database

./: CMakeLists.txt  main.c  mydatabase.db
include/: ft_string.h  not_implemented.h
src/: ft_string.c
